--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.2.0",
     "@react-native-community/masked-view": "0.1.6",
     "expo": "~37.0.3",
     "expo-font": "~8.1.0",
@@ -20,6 +21,7 @@
     "react-native-screens": "^2.2.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
+    "react-navigation-header-buttons": "^4.0.2",
     "react-navigation-stack": "^2.8.2"
   },
   "devDependencies": {
