--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-screens": "^2.2.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
+    "react-navigation-drawer": "^2.5.0",
     "react-navigation-header-buttons": "^4.0.2",
     "react-navigation-material-bottom-tabs": "^2.3.0",
     "react-navigation-stack": "^2.8.2",
